--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav-bar {
+  background-color: yellowgreen;
+  justify-content: space-evenly;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding: 2vh;
+  margin: 0;
+  list-style-type: none;
+}
+
+.route {
+  text-decoration: none;
+}
+
+.body {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.img-todo {
+  height: 50vh;
+}
+
+.img-shop {
+  height: 50vh;
+}
+
+.card:hover {
+  cursor: pointer;
+}
+
+
+/* --------TODO PAGE-------- */
+.heading {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+.todoForm {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.input-box {
+  width: 20%;
+  height: 30px;
+  border-radius: 10px;
+}
+
+.add-btn {
+  background-color: #04AA6D; /* Green */
+  border: none;
   color: white;
+  margin-left: 5px;
+  height: 35px;
+  border-radius: 10px;
+  width: 50px;
+  font-size: 16px;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 400px) {
+  .nav-bar {
+    width: 100%;
   }
-  to {
-    transform: rotate(360deg);
+ 
+  .body {
+    flex-direction: column;
   }
-}
+ 
+  .input-box {
+    width: 100%;
+  }
+ 
+  .add-btn {
+    width: 100%;
+  }
+ }
